# square-analytics

./: .gitignore  .impeccable.md  DESIGN_DOCUMENT.md  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  tauri-build.yml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/db/: database.ts  dbUtils.ts  useTransactions.ts
src/engine/: analyticsEngine.ts  basketEngine.ts  catalogueAuditEngine.ts  catalogueExporter.ts  categoryClassifier.ts  csvParser.ts  forecastEngine.ts  importEngine.ts  pdfExport.ts  purchaseOrderEngine.ts  quickbooksExport.ts  reportEngine.ts  shopifyParser.ts  squareAPIClient.ts  squareAuth.ts  squareSyncEngine.ts  squareWriteBack.ts  transactionExport.ts  xlsxParser.ts
src/hooks/: useAuthBootstrap.ts  useAutoSync.ts  useCountUp.ts  useDeferredCompute.ts  useFabsAuditCount.ts
src/lib/: appUpdate.ts  chartTheme.ts
src/store/: authStore.ts  dateRangeStore.ts  goalStore.ts  tauriStorage.ts  toastStore.ts
src/types/: models.ts
src/utils/: format.ts
src/views/: AccountantReportView.tsx  AnomalyView.tsx  BasketAnalysisView.tsx  BundleView.tsx  CatalogueCheckerView.tsx  CatalogueProductsView.tsx  CategoryTaxAuditView.tsx  CustomerView.tsx  DashboardView.tsx  DeadStockView.tsx  ForecastView.tsx  ImportView.tsx  InventoryView.tsx  OpexView.tsx  PriceOptimizationView.tsx  ProductDetailView.tsx  ProfitView.tsx  ReportsView.tsx  (+9 more)
(+21 files in other folders)
